# hp3d

./: .gitignore  CMakeLists.txt
assets/levels/01/: Adv1Willow.mtl
shaders/: preview.frag  preview.vert  retro.frag  retro.vert  screen.frag  shadow.frag  shadow.vert
src/: app.cpp  app.hpp  arena.cpp  arena.hpp  camera.cpp  camera.hpp  main.cpp
src/engine/: game_object.cpp  game_object.hpp  imgui_layer.cpp  imgui_layer.hpp  physics.cpp  physics.hpp  player_controller.cpp  player_controller.hpp  renderer.cpp  renderer.hpp  resource_manager.cpp  resource_manager.hpp  scene.cpp  scene.hpp  window.cpp  window.hpp
src/engine/3p/: jolt_impl.cpp  jolt_impl.hpp
src/engine/imgui/: asset_browser.cpp  asset_browser.hpp  scene_hierarchy.cpp  scene_hierarchy.hpp
src/game/: level1.cpp  level1.hpp
